welcome.lessons.welcome.bat.bool2.DateFashion.scala.error
dateFashion:3: error: not found: value Mat
		if (Mat.min(you,date)<=2) {
                    ^